--- a/app/app.css
+++ b/app/app.css
@@ -9,4 +9,17 @@ In many cases you may want to use the NativeScript core theme instead
 of writing your own CSS rules. For a full list of class names in the theme
 refer to http://docs.nativescript.org/ui/theme.
 */
-@import 'nativescript-theme-core/css/core.light.css';
+/* @import 'nativescript-theme-core/css/core.light.css'; */
+
+ActionBar {
+    background-color: #3d81ee;
+    color: white;
+}
+
+.wrapper {
+    background-color: #EEEEEE;
+}
+
+.mdi {
+    font-family: "Material Icons", "MaterialIcons-Regular";
+}
